researcher_error.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
    Checking half v2.4.1
    Checking gloo-utils v0.2.0
    Checking wasm-streams v0.4.2
    Checking tachys v0.2.11
    Checking console_log v1.0.0
    Checking gloo-net v0.6.0
    Checking gloo-net v0.5.0
    Checking gloo-console v0.3.0
    Checking gemm-common v0.17.1
    Checking server_fn v0.8.8
    Checking gemm-f32 v0.17.1
    Checking gemm-c32 v0.17.1
    Checking gemm-c64 v0.17.1
    Checking gemm-f64 v0.17.1
    Checking gemm-f16 v0.17.1
    Checking gemm v0.17.1
    Checking candle-core v0.3.3
    Checking candle-nn v0.3.3
    Checking candle-transformers v0.3.3
    Checking ask_pete_core v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_core)
    Checking leptos_server v0.8.6
    Checking leptos_dom v0.8.7
warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

    Checking leptos v0.8.14
    Checking leptos_router v0.8.10
    Checking leptos_meta v0.8.5
warning: `ask_pete_core` (lib) generated 1 warning (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking ask_pete_researcher v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_researcher)
error[E0432]: unresolved import `pete_core::ai::gemma_agent`
 --> crates\ask_pete_researcher\src\ai\mod.rs:2:9
  |
2 | pub use pete_core::ai::gemma_agent;
  |         ^^^^^^^^^^^^^^^-----------
  |         |              |
  |         |              help: a similar name exists in the module: `gemma_client`
  |         no `gemma_agent` in `ai`
  |
note: found an item that was configured out
 --> C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_core\src\ai\mod.rs:2:9
  |
1 | #[cfg(target_arch = "wasm32")]
  |       ---------------------- the item is gated behind the `wasm32` feature
2 | pub mod gemma_agent;
  |         ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ask_pete_researcher` (lib) due to 1 previous error
